--- a/docker.yaml
+++ b/docker.yaml
@@ -1,24 +1,24 @@
 postgres:
     container_name: postgres
     networks:
-      - basic
+        - basic
     image: postgres:latest
     restart: always
     volumes:
-      - ./v1.1/fabricexplorer.sql:/docker-entrypoint-initdb.d/fabricexplorer.sql
+        - ./v1.1/fabricexplorer.sql:/docker-entrypoint-initdb.d/fabricexplorer.sql
     ports:
-      - 5432:5432
+        - 5432:5432
 
-  explorer:
+explorer:
     container_name: explorer
     networks:
-      - basic
+        - basic
     image: richardholzeis/fabric-explorer:v1.1
     command: bash -c "./wait-for-it.sh -t 120 postgres:5432 -s -- node main.js"
     volumes:
-      - ./v1.1/config.json:/opt/blockchain-explorer/config.json
-      - ./composer/crypto-config:/artifacts/crypto-config
+        - ./v1.1/config.json:/opt/blockchain-explorer/config.json
+        - ./path/to/crypto-config:/artifacts/crypto-config
     depends_on:
-      - postgres
+        - postgres
     ports:
-      - 8080:8080
+        - 8080:8080
